implemented regex validation